# rustfastingest

./: .env  Cargo.toml
src/: application.rs  lib.rs  main.rs
src/config/: config.rs  mod.rs
src/db/: mod.rs  model.rs  syclla.rs  syclladb.rs
src/domain/: data.rs  mod.rs  node.rs  relation.rs
src/domain/s3/: data.rs  download.rs
src/elastic/: elastic.rs  model.rs
src/routes/: fetch_node.rs  health_check.rs  ingest.rs  mod.rs  traverse_node.rs
src/s3/: download.rs
tests/: mod.rs
tests/api/: fetch_node.rs  healthcheck.rs  helpers.rs  ingest.rs  main.rs  traverse_node.rs
tests/data/: example.json
tests/db/: helpers.rs  mod.rs  scylla.rs
tests/elastic/: elastic.rs  helpers.rs  mod.rs
